--- a/one.html
+++ b/one.html
@@ -4,7 +4,7 @@
     <title>September 3, 2024</title>
     <style>
       body {
-        background-color: papayawhip;
+        background-color: #e9f7ef;
         }
     </style>
   </head>
