--- a/one.html
+++ b/one.html
@@ -4,14 +4,14 @@
     <title>September 3, 2024</title>
     <style>
       body {
-        background-color: #e9f7ef;
+        background-color: papayawhip;
         }
     </style>
   </head>
   <body>
-    <h1>Harmonic Collection 1:</h1>
+    <h1>Hello, world!</h1>
     <p>
-      Green
+      Yay, first website
     </p>
   </body>
 </html>
